<resources>
    <string name="app_name">StudySpace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_chat">Messages</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="home_second">Home Second</string>\
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>

    <string name="auth_success">Authentication Success</string>

    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="menu_myaccount">Account</string>
    <string name="menu_roomates">Roommates</string>
    <string name="menu_postad">PostAd</string>
    <string name="menu_myAds">MyAds</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
