<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Ads" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_postad"
            android:icon="@drawable/ic_postad"
            android:title="@string/menu_postad" />
        <item
            android:id="@+id/nav_roommates"
            android:icon="@drawable/ic_roomates"
            android:title="@string/menu_roomates" />
        <item
            android:id="@+id/nav_myAds"
            android:icon="@drawable/ic_myads"
            android:title="MyAds" />
        <item
            android:id="@+id/nav_myaccount"
            android:icon="@drawable/ic_account"
            android:title="MyAccount" />
    </group>
    <item android:title="Actions">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="About" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="feedback" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="Logout"
                />

        </menu>
    </item>
</menu>
